feat: camera access and detection model

--- a/apps/templates/home/analytics.html
+++ b/apps/templates/home/analytics.html
@@ -19,7 +19,8 @@
       <div class="row mt-4">
         <div class="col-lg-8 mb-lg-0 mb-4">
           <div class="card">
-            <img src="https://cdn.osxdaily.com/wp-content/uploads/2013/12/there-is-no-connected-camera-mac.jpg" alt="camera">
+            <!-- <img src="https://cdn.osxdaily.com/wp-content/uploads/2013/12/there-is-no-connected-camera-mac.jpg" alt="camera"> -->
+            <img src="{{ url_for('home_blueprint.video_feed') }}" width="100%">
           </div>
         </div>
 
