--- a/apps/templates/home/settings.html
+++ b/apps/templates/home/settings.html
@@ -19,7 +19,8 @@
       <div class="row mt-4 mb-4">
         <div class="col-lg-8 mb-lg-0 mb-4">
           <div class="card z-index-2 h-100">
-            <img src="https://cdn.osxdaily.com/wp-content/uploads/2013/12/there-is-no-connected-camera-mac.jpg" alt="camera">
+            <!-- <img src="https://cdn.osxdaily.com/wp-content/uploads/2013/12/there-is-no-connected-camera-mac.jpg" alt="camera"> -->
+            <img src="{{ url_for('home_blueprint.video_feed') }}" width="100%">
           </div>
           <div style="width: 100%; display: flex;justify-content: end;" class="my-2">
             <button class="btn btn-primary text-end;" @click="simpan = true">Simpan</button>
